--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,27 +1,33 @@
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
+  font-display: swap;
   font-weight: 300;
   font-display: swap;
-  src: url('../assets/fonts/NotoSansKR-Light.otf') format('truetype'),
+  src: local(NotoSansKR-Light),
     url('../assets/fonts/NotoSansKR-Light.woff2') format('woff2'),
-    url('../assets/fonts/NotoSansKR-Light.woff') format('woff');
+    url('../assets/fonts/NotoSansKR-Light.woff') format('woff'),
+    url('../assets/fonts/NotoSansKR-Light.otf') format('opentype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
+  font-display: swap;
   font-weight: 500;
-  src: url('../assets/fonts/NotoSansKR-Regular.otf') format('truetype'),
+  src: local(NotoSansKR-Regular),
     url('../assets/fonts/NotoSansKR-Regular.woff2') format('woff2'),
-    url('../assets/fonts/NotoSansKR-Regular.woff') format('woff');
+    url('../assets/fonts/NotoSansKR-Regular.woff') format('woff'),
+    url('../assets/fonts/NotoSansKR-Regular.otf') format('opentype');
 }
 
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
-  src: url('../assets/fonts/NotoSansKR-Bold.otf') format('truetype'),
+  src: local(NotoSansKR-Bold),
     url('../assets/fonts/NotoSansKR-Bold.woff2') format('woff2'),
-    url('../assets/fonts/NotoSansKR-Bold.woff') format('woff');
+    url('../assets/fonts/NotoSansKR-Bold.woff') format('woff'),
+    url('../assets/fonts/NotoSansKR-Bold.otf') format('opentype');
 }
